# bvh-visualizer

./: .gitignore  CMakeLists.txt  readme.md  runtime-config.txt
data/: imgui.ini
viewer/: ArcBall.h  CMakeLists.txt  Math.h  Mesh.cpp  Mesh.h  UI.cpp  UI.h  aabb.h  aabb.hpp  bvh.cpp  bvh.h  collider.cpp  collider.h  viewer.cpp  viewer.h
